[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entities/Pieces/Number/Number.gd" type="Script" id=1]
[ext_resource path="res://Components/PieceComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/8.png" type="Texture" id=4]
[ext_resource path="res://Assets/7.png" type="Texture" id=5]
[ext_resource path="res://Assets/6.png" type="Texture" id=6]
[ext_resource path="res://Assets/!.png" type="Texture" id=7]
[ext_resource path="res://Assets/3.png" type="Texture" id=8]
[ext_resource path="res://Assets/5.png" type="Texture" id=9]
[ext_resource path="res://Assets/4.png" type="Texture" id=10]
[ext_resource path="res://Assets/2.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 174, 174 )

[node name="Number" type="Area2D"]
z_index = 3
script = ExtResource( 1 )
piece_type = "Number"
normal_color = Color( 1, 1, 1, 1 )
hover_color = Color( 1, 0, 1, 1 )
highlight_color = Color( 1, 0, 1, 1 )
hover_and_highlight_color = Color( 1, 0, 1, 1 )
ordered_textures = [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="PieceComponent" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
